added possibility to track user activity.

--- a/PSTRiverPlugin/pom.xml
+++ b/PSTRiverPlugin/pom.xml
@@ -32,6 +32,11 @@
             <artifactId>tika-parsers</artifactId>
             <version>1.7</version>
         </dependency>
+        <dependency>
+            <groupId>com.sun.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>3.0.9</version>
+        </dependency>
     </dependencies>
     
     <build>
