--- a/WSUI.Core/OF.Core.csproj
+++ b/WSUI.Core/OF.Core.csproj
@@ -121,10 +121,14 @@
     <Compile Include="Core\Attributes\BaseWSUIAttribute.cs" />
     <Compile Include="Core\Attributes\EnumPrefixAttribute.cs" />
     <Compile Include="Core\Attributes\FieldAttribute.cs" />
+    <Compile Include="Data\ElasticSearch\Converter\OFConditionCollectionConverter.cs" />
+    <Compile Include="Data\ElasticSearch\OFQueryBoolConditions.cs" />
     <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleContentTerm.cs" />
     <Compile Include="Data\ElasticSearch\Request\Attachment\OFAttachmentSimpleFilenameTerm.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Base\OFBaseCondition.cs" />
     <Compile Include="Data\ElasticSearch\Request\Base\OFBaseDictionaryTerm.cs" />
     <Compile Include="Data\ElasticSearch\Request\Base\OFBaseInternalBool.cs" />
+    <Compile Include="Data\ElasticSearch\Request\Base\OFBaseInternalConditions.cs" />
     <Compile Include="Data\ElasticSearch\Request\Base\OFBaseTerm.cs" />
     <Compile Include="Data\ElasticSearch\Request\Contact\OFContactTerms.cs" />
     <Compile Include="Data\ElasticSearch\Request\Contact\OFEmaillContactTerms.cs" />
@@ -134,12 +138,16 @@
     <Compile Include="Data\ElasticSearch\Request\OFBody.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFBodySort.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFBoolShould.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFConditionCollection.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFInternalBoolMust.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFInternalBoolShould.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFInternalMustShouldConditions.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFMustCondition.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFQueryBoolMust.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFQueryBoolShould.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFQuerySimpleTerm.cs" />
     <Compile Include="Data\ElasticSearch\Request\Email\OFSortDateCreated.cs" />
+    <Compile Include="Data\ElasticSearch\Request\OFShouldCondition.cs" />
     <Compile Include="Data\ElasticSearch\Request\OFTerm.cs" />
     <Compile Include="Data\ElasticSearch\Response\OFHitRaw.cs" />
     <Compile Include="Data\ElasticSearch\Response\OFHitsRaw.cs" />
