--- a/PSTRiverPlugin/pom.xml
+++ b/PSTRiverPlugin/pom.xml
@@ -59,6 +59,20 @@
             <artifactId>joda-time</artifactId>
             <version>2.8.1</version>
         </dependency>
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.4.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.0</version>
+        </dependency>
+
+        
+        
+
     </dependencies>
     
     <build>
