--- a/WSUI.Module/OF.Module.csproj
+++ b/WSUI.Module/OF.Module.csproj
@@ -154,16 +154,19 @@
     <Compile Include="Core\LazyKind.cs" />
     <Compile Include="Enums\Enums.cs" />
     <Compile Include="Interface\Service\ICommandStrategy.cs" />
-    <Compile Include="Interface\Service\IElasticSearchRiverSettingsWindow.cs" />
+    <Compile Include="Interface\Service\IMainSettingsWindow.cs" />
     <Compile Include="Interface\Service\INavigationService.cs" />
     <Compile Include="Interface\ViewModel\IAdvancedSearchViewModel.cs" />
     <Compile Include="Interface\ViewModel\IContactAttachmentDetailsViewModel.cs" />
     <Compile Include="Interface\ViewModel\IContactDetailsViewModel.cs" />
     <Compile Include="Interface\ViewModel\IContactEmailDetailsViewModel.cs" />
     <Compile Include="Interface\ViewModel\IContactKindDetailsViewModel.cs" />
+    <Compile Include="Interface\ViewModel\IDetailsSettingsViewModel.cs" />
     <Compile Include="Interface\ViewModel\IElasticSearchMonitoringViewModel.cs" />
     <Compile Include="Interface\ViewModel\IElasticSearchRiverSettingsViewModel.cs" />
     <Compile Include="Interface\ViewModel\IElasticSearchViewModel.cs" />
+    <Compile Include="Interface\ViewModel\ILoggingSettingsViewModel.cs" />
+    <Compile Include="Interface\ViewModel\IMainSettingsViewModel.cs" />
     <Compile Include="Interface\View\IAllDataView.cs" />
     <Compile Include="Interface\View\IContactAttachmentDetailsView.cs" />
     <Compile Include="Interface\View\IContactDetailsView.cs" />
@@ -177,6 +180,8 @@
     <Compile Include="Interface\View\IElasticSearchView.cs" />
     <Compile Include="Interface\View\IKindsView.cs" />
     <Compile Include="Interface\ViewModel\ILazyKind.cs" />
+    <Compile Include="Interface\View\ILoggingSettingsView.cs" />
+    <Compile Include="Interface\View\IMainSettingsView.cs" />
     <Compile Include="Interface\View\IMainView.cs" />
     <Compile Include="Interface\ViewModel\IMainViewModel.cs" />
     <Compile Include="Interface\View\IPreviewView.cs" />
@@ -223,10 +228,12 @@
     <Compile Include="ViewModel\ContactDetailsViewModel.cs" />
     <Compile Include="ViewModel\ContactViewModel.cs" />
     <Compile Include="ViewModel\ElasticSearchMonitoringViewModel.cs" />
-    <Compile Include="ViewModel\ElasticSearchRiverSettingsViewModel.cs" />
+    <Compile Include="ViewModel\Settings\ElasticSearchRiverSettingsViewModel.cs" />
     <Compile Include="ViewModel\ElasticSearchViewModel.cs" />
     <Compile Include="ViewModel\EmailViewModel.cs" />
     <Compile Include="ViewModel\MainViewModel.cs" />
+    <Compile Include="ViewModel\Settings\OFLoggingSettingsViewModel.cs" />
+    <Compile Include="ViewModel\Settings\OFMainSettingsViewModel.cs" />
     <Compile Include="View\AdvancedSearchSettingsView.xaml.cs">
       <DependentUpon>AdvancedSearchSettingsView.xaml</DependentUpon>
     </Compile>
@@ -266,7 +273,7 @@
     <Compile Include="View\ElasticSearchMonitoringView.xaml.cs">
       <DependentUpon>ElasticSearchMonitoringView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\ElasticSearchRiverSettingsView.xaml.cs">
+    <Compile Include="View\Settings\ElasticSearchRiverSettingsView.xaml.cs">
       <DependentUpon>ElasticSearchRiverSettingsView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\ElasticSearchView.xaml.cs">
@@ -281,14 +288,20 @@
     <Compile Include="View\KindsView.xaml.cs">
       <DependentUpon>KindsView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="View\Settings\OFLoggingSettingsView.xaml.cs">
+      <DependentUpon>OFLoggingSettingsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="View\Settings\OFMainSettingsView.xaml.cs">
+      <DependentUpon>OFMainSettingsView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="View\PreviewView.xaml.cs">
       <DependentUpon>PreviewView.xaml</DependentUpon>
     </Compile>
     <Compile Include="View\SidebarKindsView.xaml.cs">
       <DependentUpon>SidebarKindsView.xaml</DependentUpon>
     </Compile>
-    <Compile Include="View\Windows\ElasticSearchRiverSettingsWindow.xaml.cs">
-      <DependentUpon>ElasticSearchRiverSettingsWindow.xaml</DependentUpon>
+    <Compile Include="View\Windows\OFMainSettingsWindow.xaml.cs">
+      <DependentUpon>OFMainSettingsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="WSModule.cs" />
   </ItemGroup>
@@ -377,7 +390,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\ElasticSearchRiverSettingsView.xaml">
+    <Page Include="View\Settings\ElasticSearchRiverSettingsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -397,6 +410,14 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="View\Settings\OFLoggingSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="View\Settings\OFMainSettingsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\PreviewView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -405,7 +426,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
-    <Page Include="View\Windows\ElasticSearchRiverSettingsWindow.xaml">
+    <Page Include="View\Windows\OFMainSettingsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
