--- a/PSTRiverPlugin/pom.xml
+++ b/PSTRiverPlugin/pom.xml
@@ -67,6 +67,12 @@
             <version>3.0</version>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.elasticsearch</groupId>
             <artifactId>elasticsearch</artifactId>
             <version>1.7.0</version>
