refactoring. added possibility to force indexing process (user activity).

--- a/WSUI.Core/OF.Core.csproj
+++ b/WSUI.Core/OF.Core.csproj
@@ -164,10 +164,6 @@
     <Compile Include="Data\ElasticSearch\Response\OFShardsRaw.cs" />
     <Compile Include="Data\ElasticSearch\Response\WSUIStatusItem.cs" />
     <Compile Include="Data\ElasticSearch\Response\WSUIStatusResponse.cs" />
-    <Compile Include="ElasticSearch\Clients\OFElasticRiverStatus.cs" />
-    <Compile Include="ElasticSearch\Clients\OFElasticSeachIndexAttachmentClient.cs" />
-    <Compile Include="ElasticSearch\Clients\OFElasticSearchOFPluginStatusClient.cs" />
-    <Compile Include="ElasticSearch\Clients\OFElasticUpdateSettingsClient.cs" />
     <Compile Include="Enums\AttachmentIndexProcess.cs" />
     <Compile Include="Enums\OFPluginStatus.cs" />
     <Compile Include="Events\OFMenuEnabling.cs" />
@@ -175,16 +171,13 @@
     <Compile Include="Extensions\FileExtensions.cs" />
     <Compile Include="Helpers\OFIsolatedStorageHelper.cs" />
     <Compile Include="Helpers\OFObjectJsonSaveReadHelper.cs" />
+    <Compile Include="Interfaces\IElasticSearchForceClient.cs" />
     <Compile Include="Interfaces\IElasticSearchIndexAttachmentClient.cs" />
     <Compile Include="Interfaces\IElasticSearchOFPluginStatusClient.cs" />
     <Compile Include="Interfaces\IElasticSearchRiverStatus.cs" />
     <Compile Include="Interfaces\IElasticTrackingClient.cs" />
     <Compile Include="Interfaces\IElasticSearchClient.cs" />
-    <Compile Include="ElasticSearch\Clients\OFElasticInitializingClient.cs" />
-    <Compile Include="ElasticSearch\Clients\OFElasticSearchClient.cs" />
-    <Compile Include="ElasticSearch\Clients\OFElasticTrackingClient.cs" />
     <Compile Include="Enums\RiverSchedule.cs" />
-    <Compile Include="Helpers\OFUserActivityTracker.cs" />
     <Compile Include="Interfaces\IElasticSearchInitializationIndex.cs" />
     <Compile Include="Core\ElasticSearch\OFElasticSearchClient.cs" />
     <Compile Include="Core\Event\BasePayloadEvent.cs" />
